--- a/ShooterGame.uplugin
+++ b/ShooterGame.uplugin
@@ -5,7 +5,7 @@
 	"FriendlyName": "ShooterGame",
 	"Description": "",
 	"Category": "Other",
-	"CreatedBy": "",
+	"CreatedBy": "EpicGames",
 	"CreatedByURL": "",
 	"DocsURL": "",
 	"MarketplaceURL": "",
